--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "health-advisor",
   "license": "0BSD",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "./app/index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
