--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
   "name": "health-advisor",
   "license": "0BSD",
   "version": "1.0.0",
-  "main": "./app/index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "dev:poll": "cross-env CHOKIDAR_USEPOLLING=1 CHOKIDAR_INTERVAL=100 expo start -c"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.13",
     "expo-router": "^6.0.12",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-native": "0.81.4",
     "react-native-async-storage": "^0.0.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "cross-env": "^10.1.0",
     "typescript": "~5.9.2"
   },
   "private": true
